--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -1,5 +1,5 @@
 [mod-name]
-title=○🌐Métal et Étoiles
+title=○🌐Métal et Étoiles(Trad By Fr_Dae)
 
 [mod-description]
 description=○🌐L'univers est vaste et il existe d'autres moyens de quitter le système solaire. Plusieurs nouvelles destinations avec de nouvelles machines, technologies et processus uniques.
@@ -79,6 +79,7 @@ quantum-science-pack=Pack scientifique quantique
 overclock-module=Module de surcadence
 overclock-module-2=Module de surcadence 2
 overclock-module-3=Module de surcadence 3
+
 #Gauss is a surname of a famous scientist, Carl Friedrich Gauss
 gauss-rockets=Fusées Gauss
 quantum-ore-conversion=Conversion de minerai quantique
@@ -87,6 +88,7 @@ thorium-ammo=Munitions en thorium
 prototype-mech-armor=Armure mécanique prototype
 antimatter-robots=Robots à antimatière
 
+[technology-name]
 nanite-rocket-construction=Construction de fusée à nanites
 insulated-rocket-body=Corps de fusée isolé
 superdense-rocket-fuel=Carburant de fusée superdense
@@ -180,93 +182,6 @@ medium-mirandite-asteroid=Astéroïde de mirandite moyen
 big-mirandite-asteroid=Grand astéroïde de mirandite
 huge-mirandite-asteroid=Énorme astéroïde de mirandite
 
-iron-copper-ore=Minerai de fer-cuivre
-coal-stone-ore=Minerai de charbon-pierre
-dark-matter-vent=Source de matière noire
-crude-slush=Boue brute
-heavy-water-vent=Source d’eau lourde
-gold-sands=Sables aurifères
-military-scrap=Débris militaires
-ringworld-detritus=Goudron de bitume
-neumann-conduit=Conduit de Neumann
-space-chest-ms=Coffre spatial
-
-robot-spawner=Générateur de robots
-hostile-construction-bot=Robot de construction hostile
-jellyfish-spawner=Générateur de méduses
-glowing-jellyfish=Méduse lumineuse
-
-carbon-iceberg-huge=Énorme iceberg de carbone
-carbon-iceberg-big=Grand iceberg de carbone
-carbon-iceberg-medium=Iceberg moyen de carbone
-carbon-iceberg-small=Petit iceberg de carbone
-carbon-iceberg-tiny=Minuscule iceberg de carbone
-
-[entity-description]
-neumann-conduit=Se connecte partiellement au réseau électrique des plateformes abandonnées et génère une alimentation (pratiquement) gratuite sur Neumann.
-
-[item-name]
-overclock-module=Module de surcadence 1
-overclock-module-2=Module de surcadence 2
-overclock-module-3=Module de surcadence 3
-prototype-mech-armor=Armure mécanique prototype
-
-mirandite-asteroid-chunk=Morceau d’astéroïde de mirandite
-neodymium-ore=Minerai de néodyme
-thorium=Thorium
-uranium-233=Uranium-233
-neodymium-plate=Plaque de néodyme
-empty-fuel-canister=Conteneur de carburant vide
-quantite-a=Quantite A
-quantite-b=Quantite B
-quantite-c=Quantite C
-quantum-shard-a=Fragment quantique A
-quantum-shard-b=Fragment quantique B
-quantum-shard-c=Fragment quantique C
-quantum-science-pack=Pack scientifique quantique
-volatile-quantum-science-pack=Pack scientifique quantique volatil
-unstable-quantum-science-pack=Pack scientifique quantique instable
-inert-quantum-science-pack=Pack scientifique quantique inerte
-ice-xv=Glace XV
-
-dense-stone-brick=Brique de pierre dense
-antimatter=Antimatière
-dark-matter-chunk=Morceau de matière noire
-dark-matter-compressed=Matière noire comprimée
-diamond=Diamant
-dark-matter-crystal=Cristal de matière noire
-liquid-fuel-heating-tower=Tour de chauffage au carburant liquide
-anomaly-science-pack=Pack scientifique des anomalies
-
-dark-matter-fuel-cell=Cellule de carburant à matière noire
-depleted-fuel-cell=Cellule de carburant épuisée
-dark-matter-fuel=Carburant de matière noire
-nanites=Nanites
-nanite-science-pack=Pack scientifique à nanites
-multilayer-insulation=Isolation multicouche
-gold-foil=Feuille d’or
-aspheric-lens=Lentille asphérique
-high-speed-processor=Processeur haute vitesse
-optical-resonator=Résonateur optique
-bone-fragments=Fragments d’os
-bitumen=Bitume
-ring-science-pack=Pack scientifique de l’anneau
-barometric-vice=Étau barométrique
-microculture-vat=Cuve de microculture
-quantum-stabilizer=Stabilisateur quantique
-microgravity-assembler=Assembleur en microgravité
-neumann-conduit=Conduit de Neumann
-gauss-rocket=Fusée Gauss
-space-chest-ms=Coffre spatial
-algae-bacteria=Bactéries algaires
-ammoniac-bacteria=Bactéries ammoniacales
-petro-bacteria=Pétrobactéries
-radio-bacteria=Bactéries radiotrophiques
-thermo-bacteria=Bactéries thermophiles
-
-[item-description]
-neumann-conduit=Se connecte partiellement au réseau électrique des plateformes abandonnées et génère une énergie (pratiquement) gratuite sur Neumann.
-
 [fluid-name]
 gray-goo=Gel gris
 mirandite-sludge=Boue de mirandite
@@ -276,6 +191,31 @@ heavy-water=Eau lourde
 liquid-rocket-fuel=Carburant de fusée liquide
 liquid-nuclear-fuel=Carburant nucléaire liquide
 liquid-dark-matter-fuel=Carburant de matière noire liquide
+
+[recipe-category-name]
+compression=Compression
+quantum=Quantique
+nanotech=Nanotechnologie
+overclock=Surcadence
+conversion=Conversion
+
+[item-name]
+overclock-module=Module de surcadence 1
+overclock-module-2=Module de surcadence 2
+overclock-module-3=Module de surcadence 3
+prototype-mech-armor=Armure mécanique prototype
+quantum-science-pack=Pack scientifique quantique
+dense-stone-brick=Brique de pierre dense
+antimatter=Antimatière
+dark-matter-chunk=Morceau de matière noire
+dark-matter-compressed=Matière noire comprimée
+diamond=Diamant
+dark-matter-crystal=Cristal de matière noire
+liquid-fuel-heating-tower=Tour de chauffage au carburant liquide
+anomaly-science-pack=Pack scientifique des anomalies
+
+[item-description]
+neumann-conduit=Se connecte partiellement au réseau électrique des plateformes abandonnées et génère une énergie (pratiquement) gratuite sur Neumann.
 
 [recipe-name]
 gauss-rocket=Fusée Gauss
@@ -349,11 +289,9 @@ radio-bacteria-cultivation=Cultivation de bactéries radiotrophes
 petro-bacteria-cultivation=Cultivation de pétro-bactéries
 ammoniac-bacteria-cultivation=Cultivation de bactéries ammoniacales
 algae-bacteria-cultivation=Cultivation d’algues
-
 iron-ore-from-stone=Minerai de fer à partir de pierre
 copper-ore-from-iron-ore=Minerai de cuivre à partir de minerai de fer
 stone-from-copper-ore=Pierre à partir de minerai de cuivre
-
 liquid-rocket-fuel=Carburant de fusée liquide
 liquid-nuclear-fuel=Carburant nucléaire liquide
 liquid-dark-matter-fuel=Carburant de matière noire liquide
@@ -363,7 +301,6 @@ empty-liquid-dark-matter-fuel=Carburant de matière noire liquide vide
 canister-liquid-rocket-fuel=Réservoir de carburant de fusée liquide
 canister-liquid-nuclear-fuel=Réservoir de carburant nucléaire liquide
 canister-liquid-dark-matter-fuel=Réservoir de carburant de matière noire liquide
-
 nano-rocket-part=Pièce de fusée nano
 ring-rocket-part=Pièce de fusée de l'anneau
 anomalous-rocket-part=Pièce de fusée anormale
@@ -372,11 +309,9 @@ anomalous-rocket-part=Pièce de fusée anormale
 snow-patchy-grass=Herbe enneigée
 ice-rough-nix=Glace rugueuse
 ice-smooth-nix=Glace lisse
-
 empty-space-shipyard=Espace vide
 space-platform-foundation-shipyard=Fondation de plateforme abandonnée
 gray-goo-tile=Sol en gel gris
-
 ring_sand_1=Sable artificiel 1
 ring_sand_2=Sable artificiel 2
 ring_undergrowth_thin=Végétation clairsemée de l’anneau
