wrong copy past

--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -79,7 +79,6 @@ quantum-science-pack=Pack scientifique quantique
 overclock-module=Module de surcadence
 overclock-module-2=Module de surcadence 2
 overclock-module-3=Module de surcadence 3
-
 #Gauss is a surname of a famous scientist, Carl Friedrich Gauss
 gauss-rockets=Fusées Gauss
 quantum-ore-conversion=Conversion de minerai quantique
@@ -88,7 +87,6 @@ thorium-ammo=Munitions en thorium
 prototype-mech-armor=Armure mécanique prototype
 antimatter-robots=Robots à antimatière
 
-[technology-name]
 nanite-rocket-construction=Construction de fusée à nanites
 insulated-rocket-body=Corps de fusée isolé
 superdense-rocket-fuel=Carburant de fusée superdense
@@ -182,29 +180,54 @@ medium-mirandite-asteroid=Astéroïde de mirandite moyen
 big-mirandite-asteroid=Grand astéroïde de mirandite
 huge-mirandite-asteroid=Énorme astéroïde de mirandite
 
-[fluid-name]
-gray-goo=Gel gris
-mirandite-sludge=Boue de mirandite
-dark-matter-fluid=Fluide de matière noire
+iron-copper-ore=Minerai de fer-cuivre
+coal-stone-ore=Minerai de charbon-pierre
+dark-matter-vent=Source de matière noire
 crude-slush=Boue brute
-heavy-water=Eau lourde
-liquid-rocket-fuel=Carburant de fusée liquide
-liquid-nuclear-fuel=Carburant nucléaire liquide
-liquid-dark-matter-fuel=Carburant de matière noire liquide
+heavy-water-vent=Source d’eau lourde
+gold-sands=Sables aurifères
+military-scrap=Débris militaires
+ringworld-detritus=Goudron de bitume
+neumann-conduit=Conduit de Neumann
+space-chest-ms=Coffre spatial
+robot-spawner=Générateur de robots
+hostile-construction-bot=Robot de construction hostile
+jellyfish-spawner=Générateur de méduses
+glowing-jellyfish=Méduse lumineuse
+carbon-iceberg-huge=Énorme iceberg de carbone
+carbon-iceberg-big=Grand iceberg de carbone
+carbon-iceberg-medium=Iceberg moyen de carbone
+carbon-iceberg-small=Petit iceberg de carbone
+carbon-iceberg-tiny=Minuscule iceberg de carbone
 
-[recipe-category-name]
-compression=Compression
-quantum=Quantique
-nanotech=Nanotechnologie
-overclock=Surcadence
-conversion=Conversion
+[entity-description]
+neumann-conduit=Se connecte partiellement au réseau électrique des plateformes abandonnées et génère une énergie (pratiquement) gratuite sur Neumann.
+
+[item-description]
+neumann-conduit=Se connecte partiellement au réseau électrique des plateformes abandonnées et génère une énergie (pratiquement) gratuite sur Neumann.
 
 [item-name]
 overclock-module=Module de surcadence 1
 overclock-module-2=Module de surcadence 2
 overclock-module-3=Module de surcadence 3
 prototype-mech-armor=Armure mécanique prototype
+mirandite-asteroid-chunk=Morceau d’astéroïde de mirandite
+neodymium-ore=Minerai de néodyme
+thorium=Thorium
+uranium-233=Uranium-233
+neodymium-plate=Plaque de néodyme
+empty-fuel-canister=Conteneur de carburant vide
+quantite-a=Quantite A
+quantite-b=Quantite B
+quantite-c=Quantite C
+quantum-shard-a=Fragment quantique A
+quantum-shard-b=Fragment quantique B
+quantum-shard-c=Fragment quantique C
 quantum-science-pack=Pack scientifique quantique
+volatile-quantum-science-pack=Pack scientifique quantique volatil
+unstable-quantum-science-pack=Pack scientifique quantique instable
+inert-quantum-science-pack=Pack scientifique quantique inerte
+ice-xv=Glace XV
 dense-stone-brick=Brique de pierre dense
 antimatter=Antimatière
 dark-matter-chunk=Morceau de matière noire
@@ -214,8 +237,41 @@ dark-matter-crystal=Cristal de matière noire
 liquid-fuel-heating-tower=Tour de chauffage au carburant liquide
 anomaly-science-pack=Pack scientifique des anomalies
 
-[item-description]
-neumann-conduit=Se connecte partiellement au réseau électrique des plateformes abandonnées et génère une énergie (pratiquement) gratuite sur Neumann.
+dark-matter-fuel-cell=Cellule de carburant à matière noire
+depleted-fuel-cell=Cellule de carburant épuisée
+dark-matter-fuel=Carburant de matière noire
+nanites=Nanites
+nanite-science-pack=Pack scientifique à nanites
+multilayer-insulation=Isolation multicouche
+gold-foil=Feuille d’or
+aspheric-lens=Lentille asphérique
+high-speed-processor=Processeur haute vitesse
+optical-resonator=Résonateur optique
+bone-fragments=Fragments d’os
+bitumen=Bitume
+ring-science-pack=Pack scientifique de l’anneau
+barometric-vice=Étau barométrique
+microculture-vat=Cuve de microculture
+quantum-stabilizer=Stabilisateur quantique
+microgravity-assembler=Assembleur en microgravité
+neumann-conduit=Conduit de Neumann
+gauss-rocket=Fusée Gauss
+space-chest-ms=Coffre spatial
+algae-bacteria=Bactéries algaires
+ammoniac-bacteria=Bactéries ammoniacales
+petro-bacteria=Pétrobactéries
+radio-bacteria=Bactéries radiotrophiques
+thermo-bacteria=Bactéries thermophiles
+
+[fluid-name]
+gray-goo=Gelée grise
+mirandite-sludge=Boue de mirandite
+dark-matter-fluid=Fluide de matière noire
+crude-slush=Boue brute
+heavy-water=Eau lourde
+liquid-rocket-fuel=Carburant de fusée liquide
+liquid-nuclear-fuel=Carburant nucléaire liquide
+liquid-dark-matter-fuel=Carburant liquide de matière noire
 
 [recipe-name]
 gauss-rocket=Fusée Gauss
