--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -3,19 +3,40 @@
 title=金属与繁星
 
 [mod-description]
-description=宇宙辽阔无垠，一定有方法可以离开本地恒星系统。mod添加了几个新航行目的地，以及对应的新机器、科技和制造流程。
+description=宇宙辽阔无垠，为何仅局限于活动在本地恒星系统？本mod添加了几个新的平台航行目的地，以及对应的新机器、科技和制造流程。
 
 [mod-setting-name]
-is-nix-frozen-enabled=尼克斯星地表需要热量
+is-nix-frozen-enabled=夜神星地表将需要热量
 
 [mod-setting-description]
-is-nix-frozen-enabled=启用将使尼克斯星地表需要热量，就像玄冥星一样
+is-nix-frozen-enabled=启用将使夜神星地表需要热量，就像玄冥星一样
+
+#Neumann is a surname. V is the roman numeral for 5.
+#Nix is latin for night
+#Circa is a latin similar word for ring
+#Mirandus is from latin for surprise
+#Calidus is from space exploration mod, means hot
+#Senestella is from latin, means old star
+
+#Neumann V  诺依曼V环日平台
+#Nix        夜神星
+#Circa      环形世界
+#Mirandus   米兰达斯-A星球遗骸 -- compare to vanilla locale 破碎星球
+
+#Mirandus and mirandite have a connection to miracle in English.
+#Mirandite in game content is a name of an ore,or something like raw material needing refine.
+#Vanilla factorio use -素星岩 in Chinese locale.Not a strict limit.
+#mirandite  米兰迪特素
+
+#these two word can mark as a needless to translate word.Chinese culture supports the key words like this can read directly without confuse.
+#Calidus    
+#Senestella 
 
 [space-location-name]
-shipyard=诺依曼V
-nix=尼克斯星
-ringworld=半分之环
-mirandus-a=米兰达斯-A
+shipyard=诺依曼V环日平台
+nix=夜神星
+ringworld=环形世界
+mirandus-a=米兰达斯-A星球遗骸
 calidus-senestella-gate-senestella=连接到Calidus的星门
 calidus-senestella-gate-calidus=连接到Senestella的星门
 
@@ -23,14 +44,14 @@ calidus-senestella-gate-calidus=连接到Senestella的星门
 shipyard=一个安静异常的环绕着许多太空碎片的废弃人造卫星。自主活动的多用途纳米机器在这个结构上无处不在————可能是纳米机器摧毁了平台，同时在长久的时光冲刷下维持了平台。条件类似于太空平台。[item=gravity-assembler]和[item=conduit]散布在废墟周围。
 nix=有漫长昏暗夜晚的苔原气候行星，拥有异常的蕴含大量能量的[entity=dark-matter-vent]可利用。[planet=nix]的低温与[plane=aquilo]相似————资源丰富，以及伴随着的在低温下维护机器的挑战性。
 ringworld=建立于寒冷红矮星的环形世界，一半富含水资源，积攒了大量生物量，另一半则是沙漠。永昼，意味着这里可以自由部署太阳能相关技术。
-mirandus=一颗处于量子纠缠态的破碎行星。无法着陆，但是轨道上的米兰迪特素星岩可以开采加工成[item=quantite-a]，一种具有原子相移潜能的相位矿物。
+mirandus=一颗处于量子纠缠态的破碎星球。无法着陆，但是轨道上的米兰迪特素星岩可以开采加工成[item=quantite-a]，一种具有原子相移潜能的相位矿物。
 calidus-senestella-gate-senestella=先驱者技术，星门允许舰船在宇宙两个坐标之间快速通行。这个前往Calidus，即初始星系。
 calidus-senestella-gate-calidus=先驱者技术，星门允许舰船在宇宙两个坐标之间快速通行。这个前往Senestella，金属与繁星mod新增的星系。
 
 [autoplace-control-names]
-nix_enemy_base=尼克斯星敌对水母基地
-ringworld_robot_enemy_base=半分之环敌对无人机基地
-ringworld_snapper_enemy_base=半分之环敌对装甲虫基地
+nix_enemy_base=夜神星敌对水母基地
+ringworld_robot_enemy_base=环形世界敌对无人机基地
+ringworld_snapper_enemy_base=环形世界敌对装甲虫基地
 
 [asteroid-chunk-names]
 mirandite-asteroid-chunk=米兰迪特素星岩碎块
@@ -48,15 +69,15 @@ platform-power-pylons=平台电网接入点
 nanite-extraction=纳米机器提取
 nanite-platform-assembly=纳米机器太空平台构筑
 nanite-science-pack=纳米机器科研包
-planet-discovery-nix=发现星体：尼克斯星
-nix-heating-tower=尼克斯星供热塔
+planet-discovery-nix=发现星体：夜神星
+nix-heating-tower=夜神星供热塔
 crude-slush-processing=杂冰原油处理
 high-pressure-manufacturing=高压加工过程
 dark-matter-processing=暗物质处理
 antimatter-catalyst=反物质催化
 dark-matter-crystal=暗物质晶体
 anomaly-science-pack=奇点科研包
-planet-discovery-ringworld=发现结构：半分之环
+planet-discovery-ringworld=发现结构：环形世界
 bitumen-processing=沥青处理
 heavy-water-processing=重水处理
 basic-glass-processing=基础玻璃处理
@@ -112,15 +133,15 @@ platform-power-pylons=平台电网接入点
 nanite-extraction=纳米机器提取
 nanite-platform-assembly=纳米机器太空平台构筑
 nanite-science-pack=纳米机器科研包
-planet-discovery-nix=发现星体：尼克斯星
-nix-heating-tower=尼克斯星供热塔
+planet-discovery-nix=发现星体：夜神星
+nix-heating-tower=夜神星供热塔
 crude-slush-processing=杂冰原油处理
 high-pressure-manufacturing=高压加工过程
 dark-matter-processing=暗物质处理
 antimatter-catalyst=反物质催化
 dark-matter-crystal=暗物质晶体
 anomaly-science-pack=奇点科研包
-planet-discovery-ringworld=发现环绕恒星结构：半分之环
+planet-discovery-ringworld=发现环绕恒星结构：环形世界
 bitumen-processing=沥青处理
 heavy-water-processing=重水处理
 basic-glass-processing=基础玻璃处理
@@ -130,7 +151,7 @@ gold-processing=金元素精炼
 advanced-insulative-material=高级隔热材料
 ring-science-pack=环科研包
 gold-wired-electronics=金制电路部件
-planet-discovery-mirandus= 米兰达斯是一个被米兰迪特素星岩环绕的破碎行星，米兰迪特素星岩是一种新类型的星岩，要对其做好准备。
+planet-discovery-mirandus= 米兰达斯是一个被一种新类型的星岩--米兰迪特素星岩环绕的破碎行星，确保做足对处理新种类星岩的准备工作。
 mirandite-processing=米兰迪特素处理
 neodymium-processing=钕处理
 quantum-stabilization=量子固化
@@ -246,6 +267,7 @@ microculture-vat=微生态培养缸
 quantum-stabilizer=量子稳固设备
 microgravity-assembler=微重力组装机
 neumann-conduit=诺依曼V电网接线器
+#Gauss is a surname of a famous scientist, Carl Friedrich Gauss
 gauss-rocket=高斯火箭弹
 space-chest-ms=太空储物箱
 algae-bacteria=绿藻
