--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -1,9 +1,9 @@
 
 [mod-name]
-title=金属与繁星
+title=○🌐金属与繁星
 
 [mod-description]
-description=宇宙辽阔无垠，为何仅局限于活动在本地恒星系统？本mod添加了几个新的平台航行目的地，以及对应的新机器、科技和制造流程。
+description=○🌐宇宙辽阔无垠，为何仅局限于活动在本地恒星系统？本mod添加了几个新的平台航行目的地，以及对应的新机器、科技和制造流程。
 
 [mod-setting-name]
 is-nix-frozen-enabled=夜神星地表将需要热量
