--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -42,7 +42,7 @@ calidus-senestella-gate-calidus=连接到Senestella的星门
 
 [space-location-description]
 shipyard=一个安静异常的环绕着许多太空碎片的废弃人造卫星。自主活动的多用途纳米机器在这个结构上无处不在————可能是纳米机器摧毁了平台，同时在长久的时光冲刷下维持了平台。条件类似于太空平台。[item=gravity-assembler]和[item=conduit]散布在废墟周围。
-nix=有漫长昏暗夜晚的苔原气候行星，拥有异常的蕴含大量能量的[entity=dark-matter-vent]可利用。[planet=nix]的低温与[plane=aquilo]相似————资源丰富，以及伴随着的在低温下维护机器的挑战性。
+nix=有漫长昏暗夜晚的苔原气候行星，拥有异常的蕴含大量能量的[entity=dark-matter-vent]可利用。[planet=nix]的低温与[planet=aquilo]相似————资源丰富，以及伴随着的在低温下维护机器的挑战性。
 ringworld=建立于寒冷红矮星的环形世界，一半富含水资源，积攒了大量生物量，另一半则是沙漠。永昼，意味着这里可以自由部署太阳能相关技术。
 mirandus=一颗处于量子纠缠态的破碎星球。无法着陆，但是轨道上的米兰迪特素星岩可以开采加工成[item=quantite-a]，一种具有原子相移潜能的相位矿物。
 calidus-senestella-gate-senestella=先驱者技术，星门允许舰船在宇宙两个坐标之间快速通行。这个前往Calidus，即初始星系。
