--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -1,8 +1,11 @@
+## Contributions by: Fr_Dae
+## Thank you so much for your help! Merci beaucoup pour votre aide!
+
 [mod-name]
-title=○🌐Métal et Étoiles(Trad By Fr_Dae)
+title=Métal et Étoiles
 
 [mod-description]
-description=○🌐L'univers est vaste et il existe d'autres moyens de quitter le système solaire. Plusieurs nouvelles destinations avec de nouvelles machines, technologies et processus uniques.
+description=L'univers est vaste et il existe d'autres moyens de quitter le système solaire. Plusieurs nouvelles destinations avec de nouvelles machines, technologies et processus uniques.
 
 [mod-setting-name]
 is-nix-frozen-enabled=Nix nécessite un chauffage
