fix error with title/description

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -3,10 +3,10 @@
 
 
 [mod-name]
-title=金属与繁星
+metal-and-stars=金属与繁星
 
 [mod-description]
-description=宇宙辽阔无垠，一定有方法可以离开本地恒星系统。mod添加了几个新航行目的地，以及对应的新机器、科技和制造流程。
+metal-and-stars=宇宙辽阔无垠，一定有方法可以离开本地恒星系统。mod添加了几个新航行目的地，以及对应的新机器、科技和制造流程。
 
 [mod-setting-name]
 is-nix-frozen-enabled=尼克斯星地表需要热量
