--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -1,8 +1,8 @@
 [mod-name]
-title=○🌐Métal et Étoiles(Trad By Fr_Dae)
+metal-and-stars=○🌐Métal et Étoiles(Trad By Fr_Dae)
 
 [mod-description]
-description=○🌐L'univers est vaste et il existe d'autres moyens de quitter le système solaire. Plusieurs nouvelles destinations avec de nouvelles machines, technologies et processus uniques.
+metal-and-stars=○🌐L'univers est vaste et il existe d'autres moyens de quitter le système solaire. Plusieurs nouvelles destinations avec de nouvelles machines, technologies et processus uniques.
 
 [mod-setting-name]
 is-nix-frozen-enabled=Nix nécessite un chauffage
