--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,9 +1,9 @@
 
 [mod-name]
-metal-and-stars=Metal and Stars
+metal-and-stars=○🌐Metal and Stars
 
 [mod-description]
-metal-and-stars= It's a big universe out there, and there are other ways to leave the solar system. Several new destinations with new machines, technologies, and unique processes
+metal-and-stars=○🌐It's a big universe out there, and there are other ways to leave the solar system. Several new destinations with new machines, technologies, and unique processes
 
 [mod-setting-name]
 is-nix-frozen-enabled=Nix requires heating
