--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -22,8 +22,8 @@ shipyard=Neumann V
 nix=Nix
 ringworld=Circa
 mirandus-a=Mirandus-A
-calidus-senestella-gate-senestella=Stargate to Calidus
-calidus-senestella-gate-calidus=Stargate to Senestella
+calidus-senestella-gate-senestella=Calidus Stargate
+calidus-senestella-gate-calidus=Senestella Stargate
 
 [space-location-description]
 shipyard=A derelict satelite, with unusually calm space debris. Uninstructed nanites, microscopic multipurpose robots, are omnipresent on the structure - probably both what's ruined it and what's kept it together this long. Conditions are similar to a space platform. [item=gravity-assembler] and [item=conduit] are scattered around the ruin.
