new release version

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -7,9 +7,11 @@ metal-and-stars=○🌐It's a big universe out there, and there are other ways t
 
 [mod-setting-name]
 is-nix-frozen-enabled=Nix requires heating
+is-micro-gravity-lab-all-science-enabled=Microgravity lab can process basic science
 
 [mod-setting-description]
 is-nix-frozen-enabled=This will make Nix require heating like Aquilo does.
+is-micro-gravity-lab-all-science-enabled=This enables the Microgravity lab to process basic science. Normally it only processes space sciences
 
 #Neumann is a surname. V is the roman numeral for 5.
 #Nix is latin for night
