--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -9,9 +9,11 @@ metal-and-stars=○🌐L'univers est vaste et il existe d'autres moyens de quitt
 
 [mod-setting-name]
 is-nix-frozen-enabled=Nix nécessite un chauffage
+is-micro-gravity-lab-all-science-enabled=Un laboratoire de microgravité peut traiter les sciences fondamentales
 
 [mod-setting-description]
 is-nix-frozen-enabled=Cela rendra Nix dépendant du chauffage, comme Aquilo.
+is-micro-gravity-lab-all-science-enabled=Un laboratoire de microgravité peut traiter les sciences fondamentales
 
 #Neumann est un nom de famille. V est le chiffre romain pour 5.
 #Nix est du latin pour nuit
