--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -10,9 +10,11 @@ metal-and-stars=○🌐宇宙辽阔无垠，为何仅局限于活动在本地恒
 
 [mod-setting-name]
 is-nix-frozen-enabled=夜神星地表将需要热量
+is-micro-gravity-lab-all-science-enabled=微重力实验室可以处理基础科学
 
 [mod-setting-description]
 is-nix-frozen-enabled=启用将使夜神星地表需要热量，就像玄冥星一样
+is-micro-gravity-lab-all-science-enabled=微重力实验室可以处理基础科学
 
 #Neumann is a surname. V is the roman numeral for 5.
 #Nix is latin for night
