--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -1,3 +1,5 @@
+## Contributions by: DiabloPower
+## Thank you so much for your help! Vielen Dank für Ihre Hilfe!
 
 [mod-name]
 metal-and-stars=○🌐Metall und Sterne
