--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -10,10 +10,12 @@ metal-and-stars=○🌐L'univers est vaste et il existe d'autres moyens de quitt
 [mod-setting-name]
 is-nix-frozen-enabled=Nix nécessite un chauffage
 is-micro-gravity-lab-all-science-enabled=Un laboratoire de microgravité peut traiter les sciences fondamentales
+is-nix-enemies-enabled=Ennemis sur Nix
 
 [mod-setting-description]
 is-nix-frozen-enabled=Cela rendra Nix dépendant du chauffage, comme Aquilo.
 is-micro-gravity-lab-all-science-enabled=Un laboratoire de microgravité peut traiter les sciences fondamentales
+is-nix-enemies-enabled=active la création de générateurs d'ennemis sur Nix
 
 #Neumann est un nom de famille. V est le chiffre romain pour 5.
 #Nix est du latin pour nuit
